@@ -93,3 +93,7 @@ div.v-rating i.primary--text, div.v-rating i.accent--text {
  background-color: #58b7ff !important;
  border-color: #58b7ff !important;
 }
+
+.pq-current {
+ background-color:rgba(255, 255, 255, 0.1);
+}
